--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,13 @@
 # remap prefix to Control + a
-set -g prefix C-a
+set -g prefix C-x
 unbind C-b
-bind C-a send-prefix
+bind C-x send-prefix
 
 # force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
 
+bind = set -g synchronize-panes
 # new panes and windows in the current path
 # also change split bindings
 unbind c
@@ -118,6 +119,16 @@ set-window-option -g window-status-current-format '#[fg=yellow] #I#[default] #32
 #setw -g window-status-current-attr none
 #setw -g window-status-current-bg colour0
 #setw -g window-status-current-fg colour2
+
+set-option -g status on
+set-option -g status-interval 2
+set-option -g status-utf8 on
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+set-option -g status-left "#(~/desarrollo/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#(~/desarrollo/tmux-powerline/powerline.sh right)"
+
 
 #
 # TMUX Plugin Manager
