--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # remap prefix to Control + a
-set -g prefix C-x
+set -g prefix C-a
 unbind C-b
-bind C-x send-prefix
+bind C-a send-prefix
 
 # force a reload of the config file
 unbind r
@@ -32,7 +32,7 @@ bind -n S-Left  select-pane -L
 bind -n S-Right select-pane -R
 
 # 256 colors
-set -g default-terminal screen-256color
+#set -g default-terminal screen-256color
 
 # allow C-* shortcuts in zsh
 set-window-option -g xterm-keys on  # to make ctrl-arrow, etc. work
@@ -65,25 +65,33 @@ set -g visual-activity on
 set-option -sg escape-time 50
 
 # mouse support
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+#set -g mode-mouse on
+#set -g mouse-resize-pane on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
 
 # Toggle mouse on
-bind m \
-    set -g mode-mouse on \;\
-    set -g mouse-resize-pane on \;\
-    set -g mouse-select-pane on \;\
-    set -g mouse-select-window on \;\
-    display 'Mouse: ON'
-# Toggle mouse off
-bind M \
-    set -g mode-mouse off \;\
-    set -g mouse-resize-pane off \;\
-    set -g mouse-select-pane off \;\
-    set -g mouse-select-window off \;\
-    display 'Mouse: OFF'
+#bind m \
+#    set -g mode-mouse on \;\
+#    set -g mouse-resize-pane on \;\
+#    set -g mouse-select-pane on \;\
+#    set -g mouse-select-window on \;\
+#    display 'Mouse: ON'
+## Toggle mouse off
+#bind M \
+#    set -g mode-mouse off \;\
+#    set -g mouse-resize-pane off \;\
+#    set -g mouse-select-pane off \;\
+#    set -g mouse-select-window off \;\
+#    display 'Mouse: OFF'
+
+
+
+set-option -g -q mouse on
+bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"
+bind-key -t vi-copy PPage page-up
+bind-key -t vi-copy NPage page-down
+
 
 # Colours
 
@@ -102,8 +110,11 @@ set-window-option -g window-status-current-bg '#000000'
 set-window-option -g window-status-bell-fg '#000000'
 set-window-option -g window-status-bell-bg '#d78700'
 set-window-option -g window-status-bell-attr none
-set-window-option -g window-status-format '#[fg=yellow]#F#I#[default] #32W '
-set-window-option -g window-status-current-format '#[fg=yellow] #I#[default] #32W '
+#set-window-option -g window-status-format '#[fg=yellow]#F#I#[default] #32W '
+#set-window-option -g window-status-current-format '#[fg=yellow] #I#[default] #32W '
+set-window-option -g window-status-format '#[fg=yellow]#F#I#[default] '
+set-window-option -g window-status-current-format '#[fg=yellow] #I#[default] '
+
 
 # Light.
 # based on base16 color scheme
@@ -123,7 +134,7 @@ set-window-option -g window-status-current-format '#[fg=yellow] #I#[default] #32
 set-option -g status on
 set-option -g status-interval 2
 set-option -g status-utf8 on
-set-option -g status-justify "centre"
+set-option -g status-justify "left"
 set-option -g status-left-length 60
 set-option -g status-right-length 90
 set-option -g status-left "#(~/desarrollo/tmux-powerline/powerline.sh left)"
@@ -140,10 +151,10 @@ set -g @sidebar-tree-position 'left'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-open'
+#set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-fpp'
+#set -g @plugin 'tmux-plugins/tmux-copycat'
+#set -g @plugin 'tmux-plugins/tmux-fpp'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.dotfiles-plugins/tpm/tpm'
+run '~/desarrollo/tmux-plugins/tpm/tpm'
