Agrego .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,8 +45,8 @@ bind Escape copy-mode
 unbind p
 bind p paste-buffer
 # vi like selection and copy
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+#bind-key -T copy-mode-vi 'v' begin-selection
+#bind-key -T copy-mode-vi 'y' copy-selection
 
 # copy tmux buffer to system clipboard
 bind y run-shell "tmux show-buffer | xclip -sel clip -i > /dev/null" \; display-message "Copied tmux buffer to system clipboard"
@@ -89,8 +89,10 @@ set-option -sg escape-time 50
 
 set-option -g -q mouse on
 bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"
-bind-key -t vi-copy PPage page-up
-bind-key -t vi-copy NPage page-down
+#bind-key -T copy-mode-vi PPage page-up
+#bind-key -T copy-mode-vi NPage page-down
+
+
 
 
 # Colours
@@ -133,13 +135,13 @@ set-window-option -g window-status-current-format '#[fg=yellow] #I#[default] '
 
 set-option -g status on
 set-option -g status-interval 2
-set-option -g status-utf8 on
+#set-option -g status-utf8 on
 set-option -g status-justify "left"
 set-option -g status-left-length 60
 set-option -g status-right-length 90
 set-option -g status-left "#(~/desarrollo/tmux-powerline/powerline.sh left)"
 set-option -g status-right "#(~/desarrollo/tmux-powerline/powerline.sh right)"
-
+set-option -g history-limit 8000
 
 #
 # TMUX Plugin Manager
